# piano-dataset

./: .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt
dashboards/: dstart_correlation_review.py  duration_correlation_review.py  f1_score_review.py  key_correlation_review.py  key_detection_review.py  main.py  piano_metrics_review.py  pitch_correlation_review.py  utils.py  velocity_correlation_review.py
src/configs/: metrics-default.yaml  tasks-default.yaml
src/metrics/: key_distribution.py
src/piano_dataset/: __init__.py  main.py  piano_task.py  piano_tasks.py
src/piano_dataset/dashboards/: parametric_task_review.py  piano_metrics_review.py  task_review.py  utils.py
src/piano_metrics/: distribution_metrics.py  dstart_distribution.py  duration_distribuiton.py  duration_distribution.py  f1_piano.py  key_detection_test.py  key_distribution.py  piano_metric.py  pitch_distribution.py  velocity_distribution.py
tests/: key_detection_test.py
