[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piano_dataset"
version = "0.1.0"
description = "Functional definitions of tasks used in the PIANO dataset"
dependencies = [
    "pandas",
    "numpy",
    "scipy==1.14.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
